create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="header9 cid-qHJnDzWW1X mbr-fullscreen mbr-parallax-background" id="header9-l">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="header9 cid-qHJnDzWW1X mbr-fullscreen mbr-parallax-background" id="header9-l">
 
     
 
@@ -76,7 +76,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
                 Let our ideas guide you</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">With our experties will help you. Graphic Design, T-shirt Printing, Photography and many more.<br></p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-secondary display-4" href="index.html#gallery3-s">GALLERY</a>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-secondary display-4" href="index.html#slider2-v">GALLERY</a>
                 <a class="btn btn-md btn-secondary display-4" href="index.html#features3-r">OUR SERVICES</a></div>
         </div>
     </div>
