create github pages

--- a/page1.html
+++ b/page1.html
@@ -43,7 +43,7 @@
                         <img src="assets/images/22770691-1541975642538615-2459284812417858035-o-1080x762.jpg" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.com">DANINHURIEN&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html">DANINHURIEN&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="features3 cid-qHJEVOIbiH mbr-parallax-background" id="features3-13">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="features3 cid-qHJEVOIbiH mbr-parallax-background" id="features3-13">
 
     
 
