--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/22770691-1541975642538615-2459284812417858035-o-1080x762.jpg" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>DaninHurien Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
@@ -44,7 +44,7 @@
                         <img src="assets/images/22770691-1541975642538615-2459284812417858035-o-1080x762.jpg" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.com">DANINHURIEN&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html">DANINHURIEN&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
