create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="index.html">
                         <img src="assets/images/22770691-1541975642538615-2459284812417858035-o-1080x762.jpg" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="header9 cid-qHJnDzWW1X mbr-fullscreen mbr-parallax-background" id="header9-l">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="header9 cid-qHJnDzWW1X mbr-fullscreen mbr-parallax-background" id="header9-l">
 
     
 
@@ -164,6 +164,18 @@
     </figure>
 </section>
 
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-16" data-rv-view="46" style="background-color: rgb(204, 204, 204); padding-top: 0rem; padding-bottom: 0rem;">
+    <!-- Gallery -->
+    <div class="mbr-section__container mbr-gallery-layout-article">
+            <div>
+                <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
+                    <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F234652184&amp;amp;auto_play=true&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
+                </figure>
+            </div>
+        <div class="clearfix"></div>
+    </div>
+</section>
+
 <section class="cid-qJ3fObejIu" id="footer1-15">
 
     
@@ -174,8 +186,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
-                        <img src="assets/images/logo2.png" alt="Mobirise">
+                    <a href="index.html">
+                        <img src="assets/images/daninhurien-3508x2480.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
