--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                        <img src="assets/images/22770691-1541975642538615-2459284812417858035-o-1080x762.jpg" alt="Mobirise" title="" style="height: 6rem;">
+                        <img src="assets/images/22770691-1541975642538615-2459284812417858035-o-1080x7620.jpg" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html">DANINHURIEN&nbsp;</a></span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="features3 cid-qHJEVOIbiH mbr-parallax-background" id="features3-13">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="features3 cid-qHJEVOIbiH mbr-parallax-background" id="features3-13">
 
     
 
